force-app/main/default/objects/QuestionsAnswers__c/QuestionsAnswers__c.object-meta.xml
<CustomObject>
    <description>Objeto que armazena as Perguntas e Respostas da Base de Conhecimento.</description>
    <label>Pergunta e Resposta</label>
    <nameField>
        <displayFormat>Pergunta-{00000}</displayFormat>
        <label>Nome de Perguntas e Respostas</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Perguntas e Respostas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>