force-app/main/default/objects/QuestionsAnswers__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>Resposta da Base de Conhecimento do Objeto Perguntas e Respostas.</description>
    <label>Resposta</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>