force-app/main/default/objects/QuestionsAnswers__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Consulta ao cadastro de Marca, para agrupamento das perguntas por Marca.</description>
    <inlineHelpText>informar a Marca que está relacionada a Pergunta.</inlineHelpText>
    <label>Marca</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Perguntas e Respostas</relationshipLabel>
    <relationshipName>QuestionsAnswersBrand</relationshipName>
    <type>Lookup</type>
</CustomField>