force-app/main/default/objects/QuestionsAnswers__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>Pergunta da Base de Conhecimento do Objeto Perguntas e Respostas.</description>
    <label>Pergunta</label>
    <length>350</length>
    <type>Html</type>
</CustomField>