force-app/main/default/objects/QuestionsAnswers__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Question__c</columns>
    <columns>Answer__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>